增加权限功能
